# pylonguy

./: .gitignore  README.md  app.py  camera.py  config.py  deshear_util.py  gui.py  kmg2png.py  main.py  pyproject.toml  requirements.txt  thread.py  video_writer.py  worker.py  wtf2png.py
gui/: __init__.py  preview.py  settings.py
src/pylonguy/: camera.py  constants.py  main.py  theme.py  thread.py  worker.py  wtf2png.py
src/pylonguy/gui/: __init__.py  log.py  preview.py  settings.py
src/pylonguy/ui/: __init__.py  log.py  preview.py  settings.py
