[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylonguy"
version = "1.10.0"
description = "PySide6 wrapper for pypylon SDK for Basler camera manipulation, aimed for microfluidics and slow motion."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pypylon>=4.2.0",
    "pyside6>=6.7",
]

[project.urls]
Repository = "https://github.com/merv1n34k/pylonguy"

[project.scripts]
pylonguy = "pylonguy.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pylonguy"]
